feat: 新增文件撤销编辑工具并完善编辑功能
- 新增undo_file工具支持逐级撤销文件编辑操作
- 更新提示文档补充undo_file工具说明与禁用工具列表
- 为EditFileTool新增replace_all参数支持批量替换
- 添加编辑失败日志记录功能
- 优化日志级别与线程池配置
- 修复编辑匹配逻辑与行尾格式处理